--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -5,3 +5,16 @@
   text-align: center;
 }
 
+.page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 90vh;
+}
+
+.nav {
+  position: fixed;
+  bottom: 1.3rem;
+}
+
